# numpyx

./: .gitignore  README.rst  README.txt  inside-docker.sh  mkdocs.yml  numpyx.pyx  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/workflows/: wheels.yml
docs/: generatedocs.py  index.md  reference.md
numpyx/: __init__.py  numpyx.pyi  numpyx.pyx
test/: simply.py
