[project]
name = "numpyx"
version = "1.1.1"
description = "Utility functions for numpy, written in cython"
authors = [
    { name = "Eduardo Moguillansky", email = "eduardo.moguillansky@gmail.com" }
]
license = "MIT"
readme = "README.rst"
requires_python = "^3.8"
homepage = "https://github.com/gesellkammer/numpyx"
repository = "https://github.com/gesellkammer/numpyx"

dependencies = [
  'numpy>=1.22'
]

classifiers = [
    "Topic :: Software Development"
]

[build-system]

requires = [
    "setuptools>=42",
    "wheel",
    "cython",
    "numpy>=1.22"
]

build-backend = "setuptools.build_meta"

